--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.120.4",
+    "@react-three/fiber": "^8.17.10",
+    "@sentry/nextjs": "^8.47.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "15.1.2",
+    "next": "15.1.3",
     "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-lottie": "^1.2.10",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.171.0",
@@ -25,8 +29,10 @@
   "devDependencies": {
     "@types/node": "22.10.2",
     "@types/react": "19.0.2",
+    "@types/react-datepicker": "^6.2.0",
+    "@types/react-lottie": "^1.2.10",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.7.2"
   }
 }
